GUI-2205: Avoid wrapping text in rounded buttons on wizards; remove errant outline for rounded buttons as there's no outline-radius property (yet).

--- a/eucaconsole/static/sass/eucaconsole.scss
+++ b/eucaconsole/static/sass/eucaconsole.scss
@@ -1174,6 +1174,14 @@ footer {
     &.disabled, &[disabled] {
         @include primary-disabled-button-mixin;
     }
+    &.tiny {
+        white-space: nowrap;
+    }
+    &.round {
+        &:hover {
+            outline: none;
+        }
+    }
 }
 
 /* -----------------------------------------
